# SignApp-Monorepo

lib/train/: setup.cfg
lib/train/train_core/: train.py
projects/trainer-web/: .gitignore  README.md  pyproject.toml
projects/trainer-web/trainer/: __init__.py  index.py  train.py
projects/trainer-web/trainer/lib/: train.py
projects/trainer-web/trainer/templates/: base.html
projects/trainer-web/trainer/templates/index/: index.html
projects/trainer-web/trainer/templates/train/: index.html  status.html
